# embedded-dynamics

./: .gitignore
guest/: Cargo.toml  link2.x  memory.x
guest-lib/: Cargo.toml
guest-lib/src/: lib.rs  memory_space.rs
guest/.cargo/: config
guest/src/: main.rs
hold/: Cargo.toml
host/: .gitignore  Cargo.toml  build.rs  memory.x  minicom.sh  run.sh
host/.cargo/: config
host/src/: main.rs  syscall.rs  usb.rs
test-lib/: Cargo.toml  memory.x
test-lib/.cargo/: config
test-lib/src/: lib.rs  main.rs
