[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.4.0"
embedded-hal ="0.2.5"
panic-halt = "0.2.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
usb-device= "0.2.9"
usbd-serial = "0.1.1"
